--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,20 @@
       "email": "alex.ruef@oregonstate.edu"
     }
   ],
-  "require": {
+  "scripts": {
+    "phpcs": "phpcs",
+    "phpcbf": "phpcbf",
+    "twigcs": "twigcs --twig-version=2"
+  },
+  "require-dev": {
+    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+    "squizlabs/php_codesniffer": "^3.7",
+    "drupal/coder": "^8.3",
+    "friendsoftwig/twigcs": "^6.2"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
